Added site html
ALLL the SWAG WAS ADDED AT ONCE :ok_hand:

--- a/autonomi.html
+++ b/autonomi.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
-<title>Team 9029: LE bots</title>
+<title>Team 9029: Autonomi</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <meta http-equiv="Content-Language" content="en-us" />
 <style type="text/css" media="all">
@@ -26,23 +26,23 @@
 					<!-- Content 1 -->
 					<div class="accordion">
 						<label for="tm" class="accordionitem">
-						<h2 id="label" ><img src="robot_icon.png" class="icon" > Robot stats</h2>
+						<h2><img src="cube_icon.png" class="icon" > Autonomous 1</h2>
 						</label>
 						<input type="checkbox" id="tm"/>
-						<p class="hiddenimg" > - 0.79m/s Drive speed</br> - 4 Motor Drive </br> - 1.11m Lift height</br> - 3.15s Lift speed (3.61s with cube)</br> - 6 Motor lift </br> - 20 Point Skyrise (4 cubes and 5 sections) </br> - Scores on medium and low goals </p>
+						<p class="hiddenimg" ><img src="/green.png" ></p>
 					</div>
 					<!-- Content 2 -->
 					<div class="accordion">
 						<label for="tn" class="accordionitem">
-						<h2><img src="section_icon.png" class="icon" > Strategy</img></h2>
+						<h2><img src="cube_icon.png" class="icon" > Autonomous 2</img></h2>
 						</label>
 						<input type="checkbox" id="tn"/>
-						<p class="hiddenimg">Our robot primarily builds the skyrise. It is capable of building 4 skyrise sections and 5 cubes </br> within 1m 45s with time to score cubes on the medium goals.</p>
+						<p class="hiddenimg"><img src="/green.png" ></img></p>
 					</div>
 					<!-- Content 3 -->
 					<div class="accordion">
 						<label for="to" class="accordionitem">
-						<h2><img src="trophy_icon.png" class="icon" > Achievements</img></h2>
+						<h2><img src="cube_icon.png" class="icon" > Autonomous 3</img></h2>
 						</label>
 						<input type="checkbox" id="to"/>
 						<p class="hiddenimg"><img src="/green.png" ></img></p>
@@ -50,7 +50,7 @@
 					<!-- Content 4 -->
 					<div class="accordion">
 						<label for="tp" class="accordionitem">
-						<h2><img src="gear_icon.png" class="icon" > About the team</img></h2>
+						<h2><img src="cube_icon.png" class="icon" > Autonomous 4</img></h2>
 						</label>
 						<input type="checkbox" id="tp"/>
 						<p class="hiddenimg"><img src="/green.png" ></img></p>
