Fixing the auton icon?
Maybe it's fixed now????

--- a/autonomi.html
+++ b/autonomi.html
@@ -19,7 +19,7 @@
 				<a href="index.html" ><img src="lebots_header.png" class="header_image" alt="LEBOTS"></a>
 				<a href="https://twitter.com/lebotss" target="blank" ><img src="tw_header.png" class="header_image" alt="LEBOTS"></a>
 				<a href="https://instagram.com/lebotss/" target="blank" ><img src="insta_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="autonomi.html" ><img src="auton_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="autonomi.html" ><img src="auto_header.png" class="header_image" alt="LEBOTS"></a>
 				<img src="edge_header.png" id="edge" alt="LEBOTS">
 			</div>
 				<div class="clearfloat"></div>
