Adding reactive Instagram feed

--- a/autonomi.html
+++ b/autonomi.html
@@ -56,10 +56,11 @@
 						<p class="hiddenimg"><img src="/green.png" ></img></p>
 					</div>
 				</br>
-					<div>
+				<div>
 					<!-- Instagram -->
-					<iframe src="http://snapwidget.com/in/?u=bGVib3Rzc3xpbnwzMDB8NHwyfHxub3wwfG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=110415" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:1200px; height:600px"></iframe>
-					</div>
+					<script src="http://snapwidget.com/js/snapwidget.js"></script>
+					<iframe src="http://snapwidget.com/in/?u=bGVib3Rzc3xpbnwzMDB8NHwyfHxub3wwfG5vbmV8b25TdGFydHx5ZXN8eWVz&ve=110415" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
+				</div>
 		</div>
 	</div>
 	<div class="clearfloat"></div>
