--- a/autonomi.html
+++ b/autonomi.html
@@ -29,7 +29,7 @@
 						<h2><img src="cube_icon.png" class="icon" > Autonomous 1</h2>
 						</label>
 						<input type="checkbox" id="tm"/>
-						<p class="hiddenimg" ><img src="/green.png" ></p>
+						<p class="hiddenimg" ><iframe width="560" height="315" src="https://www.youtube.com/embed/5Y25AItDeho" frameborder="0" allowfullscreen></iframe></p>
 					</div>
 					<!-- Content 2 -->
 					<div class="accordion">
@@ -37,7 +37,7 @@
 						<h2><img src="cube_icon.png" class="icon" > Autonomous 2</img></h2>
 						</label>
 						<input type="checkbox" id="tn"/>
-						<p class="hiddenimg"><img src="/green.png" ></img></p>
+						<p class="hiddenimg"><iframe width="560" height="315" src="https://www.youtube.com/embed/VC7Y321w7Wg" frameborder="0" allowfullscreen></iframe></img></p>
 					</div>
 					<!-- Content 3 -->
 					<div class="accordion">
@@ -45,7 +45,7 @@
 						<h2><img src="cube_icon.png" class="icon" > Autonomous 3</img></h2>
 						</label>
 						<input type="checkbox" id="to"/>
-						<p class="hiddenimg"><img src="/green.png" ></img></p>
+						<p class="hiddenimg"><iframe width="560" height="315" src="https://www.youtube.com/embed/VC7Y321w7Wg" frameborder="0" allowfullscreen></iframe></p>
 					</div>
 					<!-- Content 4 -->
 					<div class="accordion">
@@ -53,10 +53,10 @@
 						<h2><img src="cube_icon.png" class="icon" > Autonomous 4</img></h2>
 						</label>
 						<input type="checkbox" id="tp"/>
-						<p class="hiddenimg"><img src="/green.png" ></img></p>
+						<p class="hiddenimg"><iframe width="560" height="315" src="https://www.youtube.com/embed/VC7Y321w7Wg" frameborder="0" allowfullscreen></iframe></img></p>
 					</div>
 				</br>
-				<div>
+				<div class="feed" >
 					<!-- Instagram -->
 					<script src="http://snapwidget.com/js/snapwidget.js"></script>
 					<iframe src="http://snapwidget.com/in/?u=bGVib3Rzc3xpbnwyOTV8NHwyfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8eWVz&ve=110415" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
