Added Worlds 2014 category

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
 						<p class="hiddenimg">The LE Bots are a Vex Robotics team from Circleville, Ohio. This is our fourth year competing in robotics. Our team consists of four teenage boys: Cameron, Hugh, James, and Kenton. Each of these members has a key role to the team.</br></br>Cameron is the programming and electrical lead. He hates GUI based programming, so if you want to make him hate you forever, just mention LABView, easyC, or Mindstorm Megabytes.</br></br>Hugh is the designer and driving lead. He has spent endless hours practicing with the robot, and getting to know it's quirks. He also put many hours into creating the website, which is what you are looking at right now.</br></br>James is the mechanical lead. We build and drive the robot in his house, so he is often able to mess around with it while we are not available. This allows for him to do a great deal of the tedious building work, which no one else is opposed to.
 						</br></br>Kenton is our scouting and fundraising lead. He contributes probably about 90% of the money for the team(thank you Kenton), from various businesses around Circleville. As far as scouting goes, he has been working on improving and creating detailed lists of robots, how they would perform with us, and their current ranking.</p>
 					</div>
+					<div class="accordion">
+						<label for="tq" class="accordionitem">
+						<h2><img src="globe_icon.png" class="icon" > Vex World Championships 2014</img></h2>
+						</label>
+						<input type="checkbox" id="tq"/>
+						<p class="hiddenimg" id="youtube" ><iframe width="560" height="315" src="https://www.youtube.com/embed/kNOQWlS0Ghs" frameborder="0" allowfullscreen></iframe></p>
+					</div>
 				</br>
 				<div class="feed" >
 					<!-- Instagram -->
