cleaning up images

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 		<!-- Start of the accordion -->
 		<div id="acccontainer">
 			<div class="box" >
-				<a href="http://lebots.github.io" ><img src="lebots_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="https://twitter.com/lebotss" target="blank" ><img src="tw_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="https://instagram.com/lebotss/" target="blank" ><img src="insta_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="autonomi.html" ><img src="auto_header.png" class="header_image" alt="LEBOTS"></a>
-				<img src="edge_header.png" id="edge" alt="LEBOTS">
+				<a href="http://lebots.github.io" ><img src="images/lebots_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="https://twitter.com/lebotss" target="blank" ><img src="images/tw_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="https://instagram.com/lebotss/" target="blank" ><img src="images/insta_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="autonomi.html" ><img src="images/auto_header.png" class="header_image" alt="LEBOTS"></a>
+				<img src="images/edge_header.png" id="edge" alt="LEBOTS">
 			</div>
 				<div class="clearfloat"></div>
 					<!-- Content 1 -->
 					<div class="accordion">
 						<label for="tm" class="accordionitem">
-						<h2 id="label" ><img src="robot_icon.png" class="icon" > Robot stats</h2>
+						<h2 id="label" ><img src="images/robot_icon.png" class="icon" > Robot stats</h2>
 						</label>
 						<input type="checkbox" id="tm"/>
 						<p class="hiddenimg" > - 0.79m/s Drive speed</br> - 4 Motor Drive </br> - 1.11m Lift height</br> - 3.15s Lift speed (3.61s with cube)</br> - 6 Motor lift </br> - 36 Point Skyrise (5 cubes and 4 sections) </br> - Scores on medium and low goals </p>
@@ -34,7 +34,7 @@
 					<!-- Content 2 -->
 					<div class="accordion">
 						<label for="tn" class="accordionitem">
-						<h2><img src="section_icon.png" class="icon" > Strategy</img></h2>
+						<h2><img src="images/section_icon.png" class="icon" > Strategy</img></h2>
 						</label>
 						<input type="checkbox" id="tn"/>
 						<p class="hiddenimg">Our robot primarily builds the skyrise. It is capable of building 4 skyrise sections and 5 cubes </br> within 1m 45s with time to score cubes on the medium goals.</p>
@@ -42,7 +42,7 @@
 					<!-- Content 3 -->
 					<div class="accordion">
 						<label for="to" class="accordionitem">
-						<h2><img src="trophy_icon.png" class="icon" > Achievements</img></h2>
+						<h2><img src="images/trophy_icon.png" class="icon" > Achievements</img></h2>
 						</label>
 						<input type="checkbox" id="to"/>
 						<p class="hiddenimg"><img src="/green.png" ></img></p>
@@ -50,7 +50,7 @@
 					<!-- Content 4 -->
 					<div class="accordion">
 						<label for="tp" class="accordionitem">
-						<h2><img src="gear_icon.png" class="icon" > About the team</img></h2>
+						<h2><img src="images/gear_icon.png" class="icon" > About the team</img></h2>
 						</label>
 						<input type="checkbox" id="tp"/>
 						<p class="hiddenimg">The LE Bots are a Vex Robotics team from Circleville, Ohio. This is our fourth year competing in robotics. Our team consists of four teenage boys: Cameron, Hugh, James, and Kenton. Each of these members has a key role to the team.</br></br>Cameron is the programming and electrical lead. He hates GUI based programming, so if you want to make him hate you forever, just mention LABView, easyC, or Mindstorm Megabytes.</br></br>Hugh is the designer and driving lead. He has spent endless hours practicing with the robot, and getting to know it's quirks. He also put many hours into creating the website, which is what you are looking at right now.</br></br>James is the mechanical lead. We build and drive the robot in his house, so he is often able to mess around with it while we are not available. This allows for him to do a great deal of the tedious building work, which no one else is opposed to.
@@ -58,7 +58,7 @@
 					</div>
 					<div class="accordion">
 						<label for="tq" class="accordionitem">
-						<h2><img src="globe_icon.png" class="icon" > Vex World Championships 2014</img></h2>
+						<h2><img src="images/globe_icon.png" class="icon" > Vex World Championships 2014</img></h2>
 						</label>
 						<input type="checkbox" id="tq"/>
 						<p class="hiddenimg" id="youtube" ><iframe width="560" height="315" src="https://www.youtube.com/embed/kNOQWlS0Ghs" frameborder="0" allowfullscreen></iframe></p>
