--- a/autonomi.html
+++ b/autonomi.html
@@ -16,17 +16,17 @@
 		<!-- Start of the accordion -->
 		<div id="acccontainer">
 			<div class="box" >
-				<a href= "http://lebots.github.io" ><img src="lebots_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="https://twitter.com/lebotss" target="blank" ><img src="tw_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="https://instagram.com/lebotss/" target="blank" ><img src="insta_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="autonomi.html" ><img src="auto_header.png" class="header_image" alt="LEBOTS"></a>
-				<img src="edge_header.png" id="edge" alt="LEBOTS">
+				<a href= "http://lebots.github.io" ><img src="images/lebots_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="https://twitter.com/lebotss" target="blank" ><img src="images/tw_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="https://instagram.com/lebotss/" target="blank" ><img src="images/insta_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="autonomi.html" ><img src="images/auto_header.png" class="header_image" alt="LEBOTS"></a>
+				<img src="images/edge_header.png" id="edge" alt="LEBOTS">
 			</div>
 				<div class="clearfloat"></div>
 					<!-- Content 1 -->
 					<div class="accordion">
 						<label for="tm" class="accordionitem">
-						<h2><img src="cube_icon.png" class="icon" > Autonomous 1</h2>
+						<h2><img src="images/cube_icon.png" class="icon" > Autonomous 1</h2>
 						</label>
 						<input type="checkbox" id="tm"/>
 						<p class="hiddenimg" ><iframe width="560" height="315" src="https://www.youtube.com/embed/5Y25AItDeho" frameborder="0" allowfullscreen></iframe></p>
@@ -34,7 +34,7 @@
 					<!-- Content 2 -->
 					<div class="accordion">
 						<label for="tn" class="accordionitem">
-						<h2><img src="cube_icon.png" class="icon" > Autonomous 2</img></h2>
+						<h2><img src="images/cube_icon.png" class="icon" > Autonomous 2</img></h2>
 						</label>
 						<input type="checkbox" id="tn"/>
 						<p class="hiddenimg"><iframe width="560" height="315" src="https://www.youtube.com/embed/VC7Y321w7Wg" frameborder="0" allowfullscreen></iframe></img></p>
@@ -42,7 +42,7 @@
 					<!-- Content 3 -->
 					<div class="accordion">
 						<label for="to" class="accordionitem">
-						<h2><img src="cube_icon.png" class="icon" > Autonomous 3</img></h2>
+						<h2><img src="images/cube_icon.png" class="icon" > Autonomous 3</img></h2>
 						</label>
 						<input type="checkbox" id="to"/>
 						<p class="hiddenimg"><iframe width="560" height="315" src="https://www.youtube.com/embed/VC7Y321w7Wg" frameborder="0" allowfullscreen></iframe></p>
@@ -50,7 +50,7 @@
 					<!-- Content 4 -->
 					<div class="accordion">
 						<label for="tp" class="accordionitem">
-						<h2><img src="cube_icon.png" class="icon" > Autonomous 4</img></h2>
+						<h2><img src="images/cube_icon.png" class="icon" > Autonomous 4</img></h2>
 						</label>
 						<input type="checkbox" id="tp"/>
 						<p class="hiddenimg"><iframe width="560" height="315" src="https://www.youtube.com/embed/VC7Y321w7Wg" frameborder="0" allowfullscreen></iframe></img></p>
