Finished with all the stuff finally

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 					<div class="accordion">
 						<label for="tq" class="accordionitem">
-						<h2><img src="images/globe_icon.png" class="icon" > Find Us</img></h2>
+						<h2><img src="images/pin_icon.png" class="icon" > Find Us</img></h2>
 						</label>
 						<input type="checkbox" id="tq"/>
 						<p class="hiddenimg">TBD</p>
