Adding Achievement category text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
 						<h2><img src="images/trophy_icon.png" class="icon" > Achievements</img></h2>
 						</label>
 						<input type="checkbox" id="to"/>
-						<p class="hiddenimg"><img src="/green.png" ></img></p>
+						<p class="hiddenimg">2014 - Ohio Vex High School champion
+						</br>2014 - Zanesville regional champion
+						</br> 2014 - World Championship participants
+						</br> 2015 - 29 point skills regional qualification
+						</br> 2015 - 41 point State Driving skills winner
+						</br> FLL (2012-2013)
+						</br> 2012 - 8th highest scoring robot (USA)
+						</br> 2013 - Ohio state champion
+						</br> 2013 - Participants in the FLL North American open
+						</br> 2013 - Winners of the design award
+						</br> 2013 - 6th highest scoring robot (USA)</p>
 					</div>
 					<!-- Content 4 -->
 					<div class="accordion">
@@ -53,8 +63,11 @@
 						<h2><img src="images/gear_icon.png" class="icon" > About the Team</img></h2>
 						</label>
 						<input type="checkbox" id="tp"/>
-						<p class="hiddenimg">The LE Bots are a Vex Robotics team from Circleville, Ohio. This is our fourth year competing in robotics. Our team consists of four teenage boys: Cameron, Hugh, James, and Kenton. Each of these members has a key role to the team.</br></br>Cameron is the programming and electrical lead. He hates GUI based programming, so if you want to make him hate you forever, just mention LABView, easyC, or Mindstorm Megabytes.</br></br>Hugh is the designer and driving lead. He has spent endless hours practicing with the robot, and getting to know it's quirks. He also put many hours into creating the website, which is what you are looking at right now.</br></br>James is the mechanical lead. We build and drive the robot in his house, so he is often able to mess around with it while we are not available. This allows for him to do a great deal of the tedious building work, which no one else is opposed to.
-						</br></br>Kenton is our scouting and fundraising lead. He contributes probably about 90% of the money for the team(thank you Kenton), from various businesses around Circleville. As far as scouting goes, he has been working on improving and creating detailed lists of robots, how they would perform with us, and their current ranking.</p>
+						<p class="hiddenimg">The LE Bots are a Vex Robotics team from Circleville, Ohio. This is our fourth year competing in robotics. Our team consists of four teenage boys: Cameron, Hugh, James, and Kenton. Each of these members has a key role to the team.</br>
+						</br>Cameron is the programming and electrical lead. He hates GUI based programming, so if you want to make him hate you forever, just mention LABView, easyC, or Mindstorm Megabytes.</br>
+						</br>Hugh is the designer and driving lead. He has spent endless hours practicing with the robot, and getting to know it's quirks. He also put many hours into creating the website, which is what you are looking at right now.</br>
+						</br>James is the mechanical lead. We build and drive the robot in his house, so he is often able to mess around with it while we are not available. This allows for him to do a great deal of the tedious building work, which no one else is opposed to.</br>
+						</br>Kenton is our scouting and fundraising lead. He contributes probably about 90% of the money for the team(thank you Kenton), from various businesses around Circleville. As far as scouting goes, he has been working on improving and creating detailed lists of robots, how they would perform with us, and their current ranking.</p>
 					</div>
 					<div class="accordion">
 						<label for="tq" class="accordionitem">
