--- a/index.html
+++ b/index.html
@@ -19,17 +19,29 @@
 				<a href="http://lebots.github.io" ><img src="images/lebots_header.png" class="header_image" alt="LEBOTS"></a>
 				<a href="https://twitter.com/lebotss" target="blank" ><img src="images/tw_header.png" class="header_image" alt="LEBOTS"></a>
 				<a href="https://instagram.com/lebotss/" target="blank" ><img src="images/insta_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="autonomi.html" ><img src="images/auto_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="autonomi" ><img src="images/auto_header.png" class="header_image" alt="LEBOTS"></a>
 				<img src="images/edge_header.png" id="edge" alt="LEBOTS">
 			</div>
 				<div class="clearfloat"></div>
 					<!-- Content 1 -->
 					<div class="accordion">
 						<label for="tm" class="accordionitem">
-						<h2 id="label" ><img src="images/robot_icon.png" class="icon" > Robot stats</h2>
+						<h2 id="label" ><img src="images/robot_icon.png" class="icon" > Robot Stats</h2>
 						</label>
 						<input type="checkbox" id="tm"/>
-						<p class="hiddenimg" > - 0.79m/s Drive speed</br> - 4 Motor Drive </br> - 1.11m Lift height</br> - 3.15s Lift speed (3.61s with cube)</br> - 6 Motor lift </br> - 36 Point Skyrise (5 cubes and 4 sections) </br> - Scores on medium and low goals </p>
+						<p class="hiddenimg" > 
+                        <b>Drive Train</b>
+                            </br> &nbsp; 0.8m/s (2.6ft/s) Drive Speed
+                            </br> &nbsp; 4 Motor High Speed Tank Drive</br>
+                        </br> <b> Lift Mechanism</b>
+                            </br> &nbsp; 1.11m (44in) Lift Height
+                            </br> &nbsp; 3.15s Lift speed w/o cube (3.6s with cube)
+                            </br> &nbsp; 6 Motor lift
+                            </br> &nbsp; Reaches up to medium goal and can put cubes on 4-high Skyrise Tower</br>
+                        </br> <b> Claw Mechanism</b>
+                            </br> &nbsp; Use of pneumatics, no motors
+                            </br> &nbsp; Ability to tilt claw in order to reach higher
+                            </br> &nbsp; Can pick up 1 cube and 1 Skyrise at a time, separately</p>
 					</div>
 					<!-- Content 2 -->
 					<div class="accordion">
@@ -37,7 +49,27 @@
 						<h2><img src="images/section_icon.png" class="icon" > Strategy</img></h2>
 						</label>
 						<input type="checkbox" id="tn"/>
-						<p class="hiddenimg">Our robot primarily builds the skyrise. It is capable of building 4 skyrise sections and 5 cubes </br> within 1m 45s with time to score cubes on the medium goals.</p>
+						<p class="hiddenimg">
+                        <b>Capabilites</b>
+                            </br> &nbsp; Low and medium posts
+                            </br> &nbsp; Push many blocks at a time
+                            </br> &nbsp; Defend owned posts
+                            </br> &nbsp; Score on outside posts
+                            </br> &nbsp; Stack up to 4 Skyrise pegs
+                            </br> &nbsp; Place cubes on up to 4 Skyrise pegs</br>
+                        </br> <b> Preferred Strategy</b>
+                            </br> &nbsp; Skyrise Tower
+                            </br> &nbsp; Stack 4 pegs with 5 cubes
+                            </br> &nbsp; Let alliance member stack the outside or help put cubes on Skyrise</br>
+                        </br> <b> Skills Challenge Strategy</b>
+                            </br> &nbsp; Load cube so it will go onto Skyrise base when moved
+                            </br> &nbsp; Put peg on post
+                            </br> &nbsp; Put another peg on post
+                            </br> &nbsp; Put cube on post
+                            </br> &nbsp; Put peg on post
+                            </br> &nbsp; Put cube on post
+                            </br> &nbsp; Put peg on post
+                            </br> &nbsp; Push as many cubes into starter squares as possible (about 15 seconds remaining)</p>
 					</div>
 					<!-- Content 3 -->
 					<div class="accordion">
@@ -45,17 +77,27 @@
 						<h2><img src="images/trophy_icon.png" class="icon" > Achievements</img></h2>
 						</label>
 						<input type="checkbox" id="to"/>
-						<p class="hiddenimg">2014 - Ohio Vex High School champion
-						</br>2014 - Zanesville regional champion
-						</br> 2014 - World Championship participants
-						</br> 2015 - 29 point skills regional qualification
-						</br> 2015 - 41 point State Driving skills winner
-						</br> FLL (2012-2013)
-						</br> 2012 - 8th highest scoring robot (USA)
-						</br> 2013 - Ohio state champion
-						</br> 2013 - Participants in the FLL North American open
-						</br> 2013 - Winners of the design award
-						</br> 2013 - 6th highest scoring robot (USA)</p>
+						<p class="hiddenimg">
+                        <b>2014-2015 Season (VEX):</b>
+                            </br> &nbsp; Competition Finalists (Zane State #1 Regional)
+                            </br> &nbsp; Competition Finalists (Zane State #2 Regional)
+                            </br> &nbsp; Driver Skills Champion: 33 Points (Zane State #2 Regional)
+                            </br> &nbsp; Driver Skills Champion: 41 Points (Ohio State Championship)</br>
+                        </br> <b>2013-2014 Season (VEX):</b>
+                            </br> &nbsp; Competition Champions (Zane State Regional)
+                            </br> &nbsp; Competition Champions (Ohio State Championships)
+                            </br> &nbsp; 28th Place in Division (VEX World Championships)</br>
+                        </br> <b>2012-2013 Season (FLL):</b>
+                            </br> &nbsp; Champion's Award (Columbus State CC Regional)
+                            </br> &nbsp; Robot Performance Award (Dublin Robotics District)
+                            </br> &nbsp; Innovative Solution (Dublin Robotics District)
+                            </br> &nbsp; Champion's Award (Ohio State Championships)
+                            </br> &nbsp; Innovative Solution (North American Championship)
+                            </br> &nbsp; 6th Highest Robot Score in the US</br>
+                        </br> <b>2011-2012 Season (FLL):</b>
+                            </br> &nbsp; Robot Performance Award (Chillicothe-Ross County Regional)
+                            </br> &nbsp; Robot Award (Chillicothe-Ross County Regional)
+                            </br> &nbsp; 4th Highest Robot Score in the US</br></p>
 					</div>
 					<!-- Content 4 -->
 					<div class="accordion">
@@ -63,11 +105,11 @@
 						<h2><img src="images/gear_icon.png" class="icon" > About the Team</img></h2>
 						</label>
 						<input type="checkbox" id="tp"/>
-						<p class="hiddenimg">The LE Bots are a Vex Robotics team from Circleville, Ohio. This is our fourth year competing in robotics. Our team consists of four teenage boys: Cameron, Hugh, James, and Kenton. Each of these members has a key role to the team.</br>
+						<p class="hiddenimg">The LE Bots are a Vex Robotics team from Circleville, Ohio. This is our fourth year competing in robotics. Our team consists of four teenage boys: Cameron, James, Kenton, and Hugh. Each of these members has a key role to the team.</br>
 						</br>Cameron is the programming and electrical lead. He hates GUI based programming, so if you want to make him hate you forever, just mention LABView, easyC, or Mindstorm Megabytes.</br>
-						</br>Hugh is the designer and driving lead. He has spent endless hours practicing with the robot, and getting to know it's quirks. He also put many hours into creating the website, which is what you are looking at right now.</br>
-						</br>James is the mechanical lead. We build and drive the robot in his house, so he is often able to mess around with it while we are not available. This allows for him to do a great deal of the tedious building work, which no one else is opposed to.</br>
-						</br>Kenton is our scouting and fundraising lead. He contributes probably about 90% of the money for the team(thank you Kenton), from various businesses around Circleville. As far as scouting goes, he has been working on improving and creating detailed lists of robots, how they would perform with us, and their current ranking.</p>
+						</br>James is the mechanical lead. The robot is built and driven in his house, so he is often able to mess around with it while we are not available. This allows for him to do a great deal of the tedious building work, which everyone loves.</br>
+						</br>Kenton is our scouting and fund-raising lead. He contributes about 90% of the money for the team (thank you Kenton), from various businesses around Circleville. As far as scouting goes, he has been working on improving and creating detailed lists of robots, how they would perform with us, and their current ranking.</br>
+                        </br>Hugh is the graphical designer and driving lead. He has spent many hours practicing with the robot, and getting to know it's capabilities. He also put many hours into creating the website, which is what you are looking at right now.</p>
 					</div>
 					<div class="accordion">
 						<label for="tq" class="accordionitem">
