--- a/autonomi/index.html
+++ b/autonomi/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Language" content="en-us" />
 <style type="text/css" media="all">
 </style>
-<link rel="shortcut icon" href="le.ico"/>
+<link rel="shortcut icon" href="../le.ico"/>
 </head>
 <body>
 
@@ -16,10 +16,10 @@
 		<!-- Start of the accordion -->
 		<div id="acccontainer">
 			<div class="box" >
-				<a href= "http://lebots.github.io" ><img src="images/lebots_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="https://twitter.com/lebotss" target="blank" ><img src="images/tw_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="https://instagram.com/lebotss/" target="blank" ><img src="images/insta_header.png" class="header_image" alt="LEBOTS"></a>
-				<a href="autonomi.html" ><img src="images/auto_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href= "http://lebots.github.io" ><img src="../images/lebots_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="https://twitter.com/lebotss" target="blank" ><img src="../images/tw_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="https://instagram.com/lebotss/" target="blank" ><img src="../images/insta_header.png" class="header_image" alt="LEBOTS"></a>
+				<a href="autonomi.html" ><img src="../images/auto_header.png" class="header_image" alt="LEBOTS"></a>
 				<img src="../images/edge_header.png" id="edge" alt="LEBOTS">
 			</div>
 				<div class="clearfloat"></div>
