--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </br> <b> Claw Mechanism</b>
                             </br> &nbsp; Use of pneumatics, no motors
                             </br> &nbsp; Ability to tilt claw in order to reach higher
-                            </br> &nbsp; Can pick up 1 cube and 1 Skyrise at a time, separately</p>
+                            </br> &nbsp; Can pick up 1 cube or 1 Skyrise, separately</p>
 					</div>
 					<!-- Content 2 -->
 					<div class="accordion">
