Updated Find us

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<h2><img src="images/pin_icon.png" class="icon" > Find Us</img></h2>
 						</label>
 						<input type="checkbox" id="tq"/>
-						<p class="hiddenimg">TBD</p>
+						<p class="hiddenimg">We are in the Science division. Our team number, being as high as it is, means we will probably be near the back of the convention centre. I map will be posted here with a marker of our pit once we know where it will be</p>
 					</div>
 					<div class="accordion">
 						<label for="tr" class="accordionitem">
